--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,62 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:13
     environment:
-      POSTGRES_DB: fixcms
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   django:
-    build: ./backend
-    command: python manage.py runserver 0.0.0.0:8000
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    entrypoint: /app/entrypoint.sh
     volumes:
       - ./backend:/app
+      - static_volume:/app/static
+      - media_volume:/app/media
     ports:
       - "8000:8000"
     depends_on:
-      - db
-    environment:
-      - DATABASE_URL=postgres://myuser:mypassword@db:5432/mydatabase
+      db:
+        condition: service_healthy
+    env_file:
+      - .env
 
   react:
-    build: ./frontend
-    volumes:
-      - ./frontend:/app
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
-    command: npm start
+    environment:
+      - REACT_APP_API_BASE_URL=http://django:8000/api
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    depends_on:
+      - django
 
   nginx:
     image: nginx:latest
     ports:
       - "80:80"
     volumes:
-      - ./nginx:/etc/nginx/conf.d
+      - ./nginx/conf/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - static_volume:/app/static
+      - media_volume:/app/media
     depends_on:
       - django
       - react
 
 volumes:
   postgres_data:
+  static_volume:
+  media_volume:
