--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app/src
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Устанавливаем netcat (nc)
+# Устанавливаем netcat (nc) для ожидания базы данных
 RUN apt-get update && apt-get install -y netcat-openbsd
 
 # Копируем код приложения
@@ -18,4 +18,5 @@ COPY . .
 EXPOSE 8000
 
 # Указываем команду запуска через entrypoint
-ENTRYPOINT ["/app/entrypoint.sh"]
+ENTRYPOINT ["/app/src/entrypoint.sh"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
