--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,56 @@
+ace_tools==0.0
+altair==5.5.0
 asgiref==3.8.1
+attrs==25.1.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.1.31
 chardet==5.2.0
+charset-normalizer==3.4.1
+click==8.1.8
 Django==5.1.4
 django-cors-headers==4.6.0
 django-environ==0.12.0
 django-rest-framework==0.1.0
 djangorestframework==3.15.2
-djangorestframework-simplejwt==5.3.1
+djangorestframework_simplejwt==5.5.0
+Faker==37.0.0
+gitdb==4.0.12
+GitPython==3.1.44
 gunicorn==23.0.0
+idna==3.10
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 lxml==5.3.0
+MarkupSafe==3.0.2
+narwhals==1.29.1
+numpy==2.2.3
 packaging==24.2
+pandas==2.2.3
 pillow==11.0.0
+protobuf==5.29.3
 psycopg2-binary==2.9.10
-PyJWT==2.10.1
+pyarrow==19.0.1
+pydeck==0.9.1
+PyJWT==2.9.0
+python-dateutil==2.9.0.post0
 python-docx==1.1.2
+pytils==0.4.1
+pytz==2025.1
+referencing==0.36.2
 reportlab==4.2.5
+requests==2.32.3
+rpds-py==0.23.1
+six==1.17.0
+smmap==5.0.2
 sqlparse==0.5.2
+streamlit==1.43.1
+tenacity==9.0.0
+toml==0.10.2
+tools==0.1.9
+tornado==6.4.2
 typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+watchdog==6.0.0
