--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,31 +30,18 @@ services:
     env_file:
       - .env
 
-  react:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    environment:
-      - REACT_APP_API_BASE_URL=http://django:8000/api
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    depends_on:
-      - django
-
   nginx:
     image: nginx:latest
     ports:
       - "80:80"
     volumes:
-      - ./nginx/conf/nginx.conf:/etc/nginx/nginx.conf
+      - ./frontend/build:/usr/share/nginx/html:ro
+      - ./nginx/conf/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d
       - static_volume:/app/static
       - media_volume:/app/media
     depends_on:
       - django
-      - react
 
 volumes:
   postgres_data:
