Обновлены настройки подключения к базе данных, изменен URL API, добавлены новые формы отчетов о оборудовании и улучшена локализация в Dockerfile.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,12 +4,23 @@ FROM python:3.10
 # Устанавливаем рабочую директорию внутри контейнера
 WORKDIR /app/src
 
-# Устанавливаем зависимости
+# Устанавливаем зависимости системы и поддержку локалей
+RUN apt-get update && apt-get install -y \
+    netcat-openbsd \
+    locales \
+    && rm -rf /var/lib/apt/lists/*
+
+# Генерируем локаль ru_RU.UTF-8
+RUN locale-gen ru_RU.UTF-8 && \
+    update-locale LANG=ru_RU.UTF-8 LC_ALL=ru_RU.UTF-8
+
+# Устанавливаем переменные окружения, чтобы локаль применялась внутри контейнера
+ENV LANG=ru_RU.UTF-8 \
+    LC_ALL=ru_RU.UTF-8
+
+# Копируем зависимости
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-
-# Устанавливаем netcat (nc) для ожидания базы данных
-RUN apt-get update && apt-get install -y netcat-openbsd
 
 # Копируем код приложения
 COPY . .
